--- a/space invaders/index.html
+++ b/space invaders/index.html
@@ -4,56 +4,19 @@
         <title>Space Invaders</title>
         <link rel="stylesheet" type="text/css" href="css/core.css">
         <link rel="stylesheet" type="text/css" href="css/typeography.css">
-        <style>
-    
-            /* Styling needed for a fullscreen canvas and no scrollbars. */
-            body, html { 
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            }
-
-            #starfield {
-                width:100%;
-                height:100%;
-                z-index: -1;
-                position: absolute;
-                left: 0px;
-                top: 0px;
-            }
-            #gamecontainer {
-                width: 800px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            #gamecanvas { 
-                width: 800px;
-                height: 600px;
-            }
-            #info {
-                width: 800px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/game.css">
     </head>
     <body>
         <div id="starfield"></div>
         <div id="gamecontainer">
         <canvas id="gameCanvas"></canvas>
         </div>
-        <div id="info">
-            <p>Move with arrow keys, fire with the space bar. The invaders get faster and drop
-                more bombs as you complete each level!</p>
-            <p><a id="muteLink" href="#" onclick="toggleMute()">mute</a> | 
-                <a href="http://github.com/dwmkerr/spaceinvaders">spaceinvaders on github</a> | 
-                <a href="http://www.dwmkerr.com/experiments">more experiments</a> | <a href="http://www.dwmkerr.com">dwmkerr.com</a></p>
-        </div>
 
         <script src="js/starfield.js"></script>
         <script src="js/spaceinvaders.js"></script>
+        <script src="http://js.leapmotion.com/0.2.0/leap.min.js"></script>
+        <script src="js/leap.js"></script>
+
         <script>
 
             //  Create the starfield.
@@ -66,6 +29,9 @@
             var canvas = document.getElementById("gameCanvas");
             canvas.width = 800;
             canvas.height = 600;
+
+            var width = canvas.width;
+            var height = canvas.height;
 
             //  Create the game.
             var game = new Game();
